// Vitest Snapshot v1

exports[`generateRouteRecord > adds children and name when folder and component exist 1`] = `
"[
  {
    path: \\"/a\\",
    name: \\"/a\\",
    components: {
      default: () => import('a.vue')
    },
    children: [
      {
        path: \\"c\\",
        name: \\"/a/c\\",
        components: {
          default: () => import('a/c.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"c\\",
        name: \\"/b/c\\",
        components: {
          default: () => import('b/c.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/d\\",
    name: \\"/d\\",
    components: {
      default: () => import('d.vue')
    },
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > correctly names index.vue files 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"/\\",
    components: {
      default: () => import('index.vue')
    },
    /* no children */
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"\\",
        name: \\"/b/\\",
        components: {
          default: () => import('b/index.vue')
        },
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > handles non nested routes 1`] = `
"[
  {
    path: \\"/users\\",
    name: \\"/users\\",
    components: {
      default: () => import('users.vue')
    },
    children: [
      {
        path: \\"\\",
        name: \\"/users/\\",
        components: {
          default: () => import('users/index.vue')
        },
        /* no children */
      },
      {
        path: \\":id\\",
        name: \\"/users/[id]\\",
        components: {
          default: () => import('users/[id].vue')
        },
        children: [
          {
            path: \\"\\",
            name: \\"/users/[id]/\\",
            components: {
              default: () => import('users/[id]/index.vue')
            },
            /* no children */
          },
          {
            path: \\"other\\",
            name: \\"/users/[id]/other\\",
            components: {
              default: () => import('users/[id]/other.vue')
            },
            /* no children */
          }
        ],
      },
      {
        path: \\":id/not-nested\\",
        name: \\"/users/[id].not-nested\\",
        components: {
          default: () => import('users/[id].not-nested.vue')
        },
        /* no children */
      },
      {
        path: \\"other\\",
        name: \\"/users/other\\",
        components: {
          default: () => import('users/other.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/users.not-nested\\",
    name: \\"/users.not-nested\\",
    components: {
      default: () => import('users.not-nested.vue')
    },
    /* no children */
  },
  {
    path: \\"/users/:id/also-not-nested\\",
    name: \\"/users.[id].also-not-nested\\",
    components: {
      default: () => import('users.[id].also-not-nested.vue')
    },
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > names > creates multi word names 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"/\\",
    components: {
      default: () => import('index.vue')
    },
    /* no children */
  },
  {
    path: \\"/my-users\\",
    name: \\"/my-users\\",
    components: {
      default: () => import('my-users.vue')
    },
    /* no children */
  },
  {
    path: \\"/MyPascalCaseUsers\\",
    name: \\"/MyPascalCaseUsers\\",
    components: {
      default: () => import('MyPascalCaseUsers.vue')
    },
    /* no children */
  },
  {
    path: \\"/some-nested\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"file-with-:id-in-the-middle\\",
        name: \\"/some-nested/file-with-[id]-in-the-middle\\",
        components: {
          default: () => import('some-nested/file-with-[id]-in-the-middle.vue')
        },
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > creates single word names 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"/\\",
    components: {
      default: () => import('index.vue')
    },
    /* no children */
  },
  {
    path: \\"/about\\",
    name: \\"/about\\",
    components: {
      default: () => import('about.vue')
    },
    /* no children */
  },
  {
    path: \\"/users\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"\\",
        name: \\"/users/\\",
        components: {
          default: () => import('users/index.vue')
        },
        /* no children */
      },
      {
        path: \\":id\\",
        name: \\"/users/[id]\\",
        components: {
          default: () => import('users/[id].vue')
        },
        children: [
          {
            path: \\"edit\\",
            name: \\"/users/[id]/edit\\",
            components: {
              default: () => import('users/[id]/edit.vue')
            },
            /* no children */
          }
        ],
      },
      {
        path: \\"new\\",
        name: \\"/users/new\\",
        components: {
          default: () => import('users/new.vue')
        },
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > names > works with nested views 1`] = `
"[
  {
    path: \\"/\\",
    name: \\"/\\",
    components: {
      default: () => import('index.vue')
    },
    /* no children */
  },
  {
    path: \\"/users\\",
    name: \\"/users\\",
    components: {
      default: () => import('users.vue')
    },
    children: [
      {
        path: \\"\\",
        name: \\"/users/\\",
        components: {
          default: () => import('users/index.vue')
        },
        /* no children */
      },
      {
        path: \\":id\\",
        name: \\"/users/[id]\\",
        components: {
          default: () => import('users/[id].vue')
        },
        children: [
          {
            path: \\"edit\\",
            name: \\"/users/[id]/edit\\",
            components: {
              default: () => import('users/[id]/edit.vue')
            },
            /* no children */
          }
        ],
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 1`] = `
"[
  {
    path: \\"/a\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"a\\",
        name: \\"/a/a\\",
        components: {
          default: () => import('a/a.vue')
        },
        /* no children */
      },
      {
        path: \\"b\\",
        name: \\"/a/b\\",
        components: {
          default: () => import('a/b.vue')
        },
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"/a/c\\",
        components: {
          default: () => import('a/c.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"b\\",
        name: \\"/b/b\\",
        components: {
          default: () => import('b/b.vue')
        },
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"/b/c\\",
        components: {
          default: () => import('b/c.vue')
        },
        /* no children */
      },
      {
        path: \\"d\\",
        name: \\"/b/d\\",
        components: {
          default: () => import('b/d.vue')
        },
        /* no children */
      }
    ],
  }
]"
`;

exports[`generateRouteRecord > nested children 2`] = `
"[
  {
    path: \\"/a\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"a\\",
        name: \\"/a/a\\",
        components: {
          default: () => import('a/a.vue')
        },
        /* no children */
      },
      {
        path: \\"b\\",
        name: \\"/a/b\\",
        components: {
          default: () => import('a/b.vue')
        },
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"/a/c\\",
        components: {
          default: () => import('a/c.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/b\\",
    /* no name */
    /* no component */
    children: [
      {
        path: \\"b\\",
        name: \\"/b/b\\",
        components: {
          default: () => import('b/b.vue')
        },
        /* no children */
      },
      {
        path: \\"c\\",
        name: \\"/b/c\\",
        components: {
          default: () => import('b/c.vue')
        },
        /* no children */
      },
      {
        path: \\"d\\",
        name: \\"/b/d\\",
        components: {
          default: () => import('b/d.vue')
        },
        /* no children */
      }
    ],
  },
  {
    path: \\"/c\\",
    name: \\"/c\\",
    components: {
      default: () => import('c.vue')
    },
    /* no children */
  },
  {
    path: \\"/d\\",
    name: \\"/d\\",
    components: {
      default: () => import('d.vue')
    },
    /* no children */
  }
]"
`;

exports[`generateRouteRecord > works with some paths at root 1`] = `
"[
  {
    path: \\"/a\\",
    name: \\"/a\\",
    components: {
      default: () => import('a.vue')
    },
    /* no children */
  },
  {
    path: \\"/b\\",
    name: \\"/b\\",
    components: {
      default: () => import('b.vue')
    },
    /* no children */
  },
  {
    path: \\"/c\\",
    name: \\"/c\\",
    components: {
      default: () => import('c.vue')
    },
    /* no children */
  }
]"
`;
